k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP

  ---

  apiVersion: v1
kind: Service
metadata:
  name: general-service
spec:
  selector:
    app: general-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000 
  type: ClusterIP
